--- a/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
@@ -2,7 +2,45 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model IQueryable<Book> 
+
 <div class="text-center">
-   <h1>Welcome to Good Reads Bookstore! </h1>
+    <h1>Good Reads Book Database!</h1>
+    <div class="text-center">
+        <table class="center table table-dark table-striped">
+            <thead>
+                <tr>
+                    <th>Book ID</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Publisher</th>
+                    <th>ISBN</th>
+                    <th>Category</th>
+                    <th>Price</th>
+
+                </tr>
+            </thead>
+
+
+
+            <tbody>
+                <!--Loops through all of the submitted restaurants to print them out here-->
+                @foreach  (var x in Model)
+                {
+                <tr id="highlight">
+                    <td>@x.BookId </td>
+                    <td>@x.Title</td>
+                    <td>@x.Author</td>
+                    <td>@x.Publisher</td>
+                    <td>@x.ISBN</td>
+                    <td>@x.Category</td>
+                    <td>$@x.Price</td>
+                </tr>
+       }
+            </tbody>
+        </table>
+    </div>
 
 </div>
+
+
