--- a/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <h1>Good Reads Book Database!</h1>
     <div class="text-center">
         <table class="center table table-dark table-striped">
+            <!--Table for the database-->
             <thead>
                 <tr>
                     <th>Book ID</th>
@@ -24,7 +25,7 @@
 
 
             <tbody>
-                <!--Loops through all of the submitted restaurants to print them out here-->
+                <!--Loops through all of the items in the database to print them out here-->
                 @foreach  (var x in Model)
                 {
                 <tr id="highlight">
