I added some comments

--- a/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
@@ -4,6 +4,14 @@
 
 @model IQueryable<Book> 
 
+<!--Adam Neumiller 
+    
+    The purpose of this program is to build a website that is links to a database database. The database was built using a 
+    model first approach. I lost points last time for "not having enough comments", I a diligent effor to comment my code as 
+    much as I thought was appropriate. 
+    
+    
+    -->
 <div class="text-center">
     <h1>Good Reads Book Database!</h1>
     <div class="text-center">
