--- a/AdamNeumiller_BookWebsite/Views/_ViewImports.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using AdamNeumiller_BookWebsite
 @using AdamNeumiller_BookWebsite.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!--Bring in the View Models Folder-->
+@using AdamNeumiller_BookWebsite.Models.ViewModels 
+@addTagHelper  *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!-- Bring in the tag helpers we built-->
+@addTagHelper *, AdamNeumiller_BookWebsite
