--- a/AdamNeumiller_BookWebsite/Views/_ViewImports.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using AdamNeumiller_BookWebsite.Models
 <!--Bring in the View Models Folder-->
 @using AdamNeumiller_BookWebsite.Models.ViewModels 
+@using AdamNeumiller_BookWebsite.Infrastructure 
 @addTagHelper  *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!-- Bring in the tag helpers we built-->
 @addTagHelper *, AdamNeumiller_BookWebsite
