--- a/AdamNeumiller_BookWebsite/Views/Shared/BookSummary.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Shared/BookSummary.cshtml
@@ -22,4 +22,16 @@
     <td>@Model.Category</td>
     <td>$@Model.Price</td>
     <td>@Model.PageNumber</td>
+    <td>
+    <form id="@Model.BookId" asp-page="/BookPurchase" method="post">
+
+        <input type="hidden" asp-for="BookId"/> 
+        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+        <span class="card-text p1">
+            <button type="submit" class=" btn btn-success btn-sm text-center text-md-center">Add to Cart</button>
+            
+        </span>
+        
+     </form>
+    </td>
 </tr>
