--- a/AdamNeumiller_BookWebsite/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -14,6 +14,6 @@
    asp-action="Index"
    asp-controller="Home"
    asp-route-category="@category"
-   asp-route-page="1">
+   asp-route-pageNum="1">
     @category</a>
     }
