Fix issues with the models, edit views to display images

--- a/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Home/Index.cshtml
@@ -25,6 +25,7 @@
                 <tr>
                     <th>Book ID</th>
                     <th>Title</th>
+                    <th>Book Cover</th>
                     <th>Author First Name</th>
                     <th>Author Middle Initial</th>
                     <th>Author Last Name</th>
