--- a/AdamNeumiller_BookWebsite/Views/Shared/BookSummary.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Shared/BookSummary.cshtml
@@ -13,6 +13,7 @@
 <tr class="table-hover">
     <td>@Model.BookId </td>
     <td>@Model.Title</td>
+    <td><img src="@Model.BookPicURL" alt="No Image" style="width:100px"/></td>
     <td>@Model.AuthorFirstName</td>
     <td>@Model.AuthorMiddleInitial</td>
     <td>@Model.AuthorLastName</td>
