--- a/AdamNeumiller_BookWebsite/Views/Shared/_Layout.cshtml
+++ b/AdamNeumiller_BookWebsite/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-white bg-dark">
         <div class="container text-center">
-            &copy; 2021 - AdamNeumiller Assignment #8
+            &copy; 2021 - AdamNeumiller IS 531 Proj 1
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
